--- a/reading/rating.html
+++ b/reading/rating.html
@@ -46,6 +46,7 @@
   <section class="data">
     <h2>Rated with ❤️</h2>
     <ul>
+      <li><em><strong>The Arab of the Future</em></strong> by Riad Sattouf</li>
       <li><em><strong>Los asquerosos</em></strong> de Santiago Lorenzo</li>
       <li><em><strong>Pelea como una chica</em></strong> de Sandra Sabatés</li>
       <li><em><strong>El Director</em></strong> de David Jiménez</li>
@@ -56,15 +57,9 @@
     <h2>Rated with 💙</h2>
     <ul>
       <li><em><strong>Saga</em></strong> by Brian K. Vaughan and Fiona Staples</li>
-      <li>&emsp;&rarr; Book One</li>
-      <li>&emsp;&rarr; Book Two</li>
-      <li>&emsp;&rarr; Book Three</li>
       <li><em><strong>El valor de educar</em></strong> de Fernando Savater</li>
       <li><em><strong>¡Me cago en Godard!</em></strong> de Pedro Vallín</li>
       <li><em><strong>La materia oscura</em></strong> de Philip Pullman</li>
-      <li>&emsp;&rarr; Luces del norte</li>
-      <li>&emsp;&rarr; La daga</li>
-      <li>&emsp;&rarr; El catalejo lacado</li>
       <li><em><strong>A history of Heavy Metal</em></strong> by Andrew O’Neill</li>
       <li><em><strong>Elevation</em></strong> by Stephen King</li>
       <li><em><strong>Eric Clapton: The autobiography</em></strong> by Eric Clapton</li>
