--- a/reading/index.html
+++ b/reading/index.html
@@ -47,7 +47,7 @@
     <h2>2020</h2>
     <ul>
       <li><em><strong>The Arab of the Future</em></strong> by Riad Sattouf ❤️</li>
-      <li>&emsp;&rarr; Vol. 4: A Graphic Memoir of a Childhood in the Middle East, 1987–1992</li>
+      <li>&emsp;&rarr; Vol. 4: 1987–1992</li>
       <li><em><strong>Saga</em></strong> by Brian K. Vaughan and Fiona Staples 💙</li>
       <li>&emsp;&rarr; Book One</li>
       <li>&emsp;&rarr; Book Two</li>
