--- a/fonts/valentina.html
+++ b/fonts/valentina.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<title>Valentina — Pedro Arilla</title>
-	<meta name="description" content="Valentina typeface by Pedro Arilla, type designer & typographer from Spain based in London (UK).">
+	<meta name="description" content="Valentina typeface by Pedro Arilla.">
   <meta property="og:title" content="Valentina — Pedro Arilla"/>
-	<meta property="og:description" content="Valentina typeface by Pedro Arilla, type designer & typographer from Spain based in London (UK)."/>
+	<meta property="og:description" content="Valentina typeface by Pedro Arilla."/>
 	<meta property="og:type" content="website"/>
 	<meta property="og:url" content="https://pedroarilla.com/fonts/valentina"/>
 	<meta property="og:image" content="https://www.pedroarilla.com/fonts/rsc/pedroarilla-valentina-01.png"/>
@@ -19,12 +19,12 @@
 <body>
   <section class="menu">
     <ul>
-      <li><strong><a href="../">pedroarilla</a></strong></li>
-      <li><a href="./">fonts</a></li>
-      <li><a href="../texts">writing</a></li>
-      <li><a href="../reading">reading</a></li>
-      <li><a href="../code">coding</a></li>
-      <li><a href="../about">about</a></li>
+      <ul>
+        <li><strong><a href="../">pedroarilla</a></strong></li>
+        <li><a href="./">fonts</a></li>
+        <li><a href="../miscellany">miscellany</a></li>
+        <li><a href="../contact">contact</a></li>
+      </ul>
     </ul>
   </section>
   <section class="presentation">
@@ -47,7 +47,6 @@
   </section>
   <section id="images">
     <img src="rsc/pedroarilla-valentina-01.png">
-    <img src="rsc/pedroarilla-valentina-02.png">
     <img src="rsc/pedroarilla-valentina-03.png">
   </section>
     <section class="data" id="images">
