--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<title>Pedro Arilla</title>
-	<meta name="description" content="Type designer & typographer from Spain based in London (UK).">
+	<meta name="description" content="¡Hola! I’m Pedro Arilla, an independent designer with a passion for words.">
   <meta property="og:title" content="Pedro Arilla"/>
-	<meta property="og:description" content="Type designer & typographer from Spain based in London (UK)."/>
+	<meta property="og:description" content="¡Hola! I’m Pedro Arilla, an independent designer with a passion for words."/>
 	<meta property="og:type" content="website"/>
 	<meta property="og:url" content="https://pedroarilla.com/"/>
 	<meta property="og:image" content="https://pedroarilla.com/pedroarilla.jpg"/>
@@ -20,17 +20,14 @@
     <ul>
       <li><strong><a href="./">pedroarilla</a></strong></li>
       <li><a href="./fonts">fonts</a></li>
-      <li><a href="./texts">writing</a></li>
-      <li><a href="./reading">reading</a></li>
-      <li><a href="./code">coding</a></li>
-      <li><a href="./about">about</a></li>
+      <li><a href="./miscellany">miscellany</a></li>
+      <li><a href="./contact">contact</a></li>
     </ul>
   </section>
   <section class="presentation">
-    <h1><strong>¡Hola! I’m Pedro Arilla</strong>, a designer from Spain living in the UK. I’ve been designing, writing, teaching and lecturing about typefaces for the last decade. I work as a Creative Type Director at <a href="https://monotype.com/" target="_blank">Monotype</a> since 2020 — previously at Fontsmith. I am interested in how typography plays a storytelling role in the intersection of culture, technology and sociology.</h1>
-    <p>I hold an MA in Typeface Design from the University of Reading (graduating with distinction); host one of the main podcasts and publications on typography in Spanish (<a href="https://donserifa.com" target="_blank">Don Serifa</a>); organise and teach an international one-week type design workshop (<a href="https://gliglifo.com" target="_blank">Glíglifo</a>); and I am a regular speaker in type and design events.</p>
-    <p>In my day-to-day work, I build relationships with agencies and brands; research type trends and innovative letter flavours; and reflect on how to keep tricking the brain and the eye to solve legibility issues.</p>
-    <p>My main passions are stories and narratives, and how language can become tactile. I spend most of my spare time writing, reading and bookworming compulsively. However, I do not hesitate to get my nose out of a book when there is a good basketball game to watch or a new destination to explore.</p>
+    <h1><strong>¡Hola!</strong> I’m Pedro Arilla, an independent designer with a passion for words.</h1>
+    <p>I’ve been designing, writing, teaching and lecturing about typefaces for the last decade. I’ve worked as a Creative Director at Monotype and Fontsmith. I hold an MA in Typeface Design from the University of Reading (graduating with distinction); host one of the main podcasts and publications on typography in Spanish (<a href="https://donserifa.com" target="_blank">Don Serifa</a>); and co-organise and teach an international one-week type design workshop (<a href="https://gliglifo.com" target="_blank">Glíglifo</a>).</p>
+    <p>I am interested in how typography plays a storytelling role in the intersection of culture, technology and sociology. In my day-to-day work, I experiment with new font tools and tech; research type trends and innovative letter flavours; and reflect on how to keep tricking the brain and the eye to solve legibility issues.</p>
   </section>
   <section class="data" id="the-end">
     <p>&#13025; 2010–<script>document.write(new Date().getFullYear())</script> &VerticalLine; <a href="mailto:info@pedroarilla.com">Email</a> &vellip; <a href="https://twitter.com/pedroarilla" rel="me" target="_blank" title="Twitter Pedro Arilla's profile">Twitter</a> &vellip; <a href="https://instagram.com/pedroarilla" rel="me" target="_blank" title="Instagram Pedro Arilla's profile">Instagram</a> &vellip; <a href="https://www.linkedin.com/in/pedroarilla" rel="me" target="_blank" title="LinkedIn Pedro Arilla's profile">LinkedIn</a></p>
