--- a/fonts/mestre.html
+++ b/fonts/mestre.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<title>Mestre — Pedro Arilla</title>
-	<meta name="description" content="Mestre typeface by Pedro Arilla, type designer & typographer from Spain based in London (UK).">
+	<meta name="description" content="Mestre typeface by Pedro Arilla.">
   <meta property="og:title" content="Mestre — Pedro Arilla"/>
-	<meta property="og:description" content="Mestre typeface by Pedro Arilla, type designer & typographer from Spain based in London (UK)."/>
+	<meta property="og:description" content="Mestre typeface by Pedro Arilla."/>
 	<meta property="og:type" content="website"/>
 	<meta property="og:url" content="https://pedroarilla.com/fonts/mestre"/>
 	<meta property="og:image" content="https://www.pedroarilla.com/fonts/rsc/pedroarilla-mestre-1.jpg"/>
@@ -21,10 +21,8 @@
     <ul>
       <li><strong><a href="../">pedroarilla</a></strong></li>
       <li><a href="./">fonts</a></li>
-      <li><a href="../texts">writing</a></li>
-      <li><a href="../reading">reading</a></li>
-      <li><a href="../code">coding</a></li>
-      <li><a href="../about">about</a></li>
+      <li><a href="../miscellany">miscellany</a></li>
+      <li><a href="../contact">contact</a></li>
     </ul>
   </section>
   <section class="presentation">
