--- a/fonts/rocknroll.html
+++ b/fonts/rocknroll.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<title>Rock & Roll — Pedro Arilla</title>
-	<meta name="description" content="Rock & Roll type system by Pedro Arilla, type designer & typographer from Spain based in London (UK).">
+	<meta name="description" content="Rock & Roll type system by Pedro Arilla.">
   <meta property="og:title" content="Rock & Roll — Pedro Arilla"/>
-	<meta property="og:description" content="Rock & Roll type system by Pedro Arilla, type designer & typographer from Spain based in London (UK)."/>
+	<meta property="og:description" content="Rock & Roll type system by Pedro Arilla."/>
 	<meta property="og:type" content="website"/>
 	<meta property="og:url" content="https://www.pedroarilla.com/fonts/rocknroll"/>
 	<meta property="og:image" content="https://www.pedroarilla.com/fonts/rsc/pedroarilla-rocknroll-04.png"/>
@@ -20,10 +20,8 @@
     <ul>
       <li><strong><a href="../">pedroarilla</a></strong></li>
       <li><a href="./">fonts</a></li>
-      <li><a href="../texts">writing</a></li>
-      <li><a href="../reading">reading</a></li>
-      <li><a href="../code">coding</a></li>
-      <li><a href="../about">about</a></li>
+      <li><a href="../miscellany">miscellany</a></li>
+      <li><a href="../contact">contact</a></li>
     </ul>
   </section>
   <section class="presentation">
