--- a/miscellany/index.html
+++ b/miscellany/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
-	<title>Coding — Pedro Arilla</title>
-	<meta name="description" content="Coding projects by Pedro Arilla, type designer & typographer from Spain based in London (UK).">
-  <meta property="og:title" content="Coding — Pedro Arilla"/>
-	<meta property="og:description" content="Coding projects by Pedro Arilla, type designer & typographer from Spain based in London (UK)."/>
+	<title>Miscellany — Pedro Arilla</title>
+	<meta name="description" content="A bunch of things I like to keep record of.">
+  <meta property="og:title" content="Miscellany — Pedro Arilla"/>
+	<meta property="og:description" content="A bunch of things I like to keep record of."/>
 	<meta property="og:type" content="website"/>
 	<meta property="og:url" content="https://pedroarilla.com/code"/>
 	<meta property="og:image" content="https://pedroarilla.com/pedroarilla.jpg"/>
@@ -20,17 +20,21 @@
     <ul>
       <li><strong><a href="../">pedroarilla</a></strong></li>
       <li><a href="../fonts">fonts</a></li>
-      <li><a href="../texts">writing</a></li>
-      <li><a href="../reading">reading</a></li>
-      <li><a href="./">coding</a></li>
-      <li><a href="../about">about</a></li>
+      <li><a href="./">miscellany</a></li>
+      <li><a href="../contact">contact</a></li>
     </ul>
   </section>
   <section class="presentation" style="padding-bottom:0">
-      <h1><strong>Coding</strong></h1>
-      <p>A project manager and time tracker written in Python<br>&emsp;&rarr; <a href="https://github.com/pedroarilla/pomothon" target="_blank">GitHub repository</a></p>
-      <p>Workflow to set up and update scripts repositories for Glyphs app<br>&emsp;&rarr; <a href="https://github.com/pedroarilla/update-glyphs-scripts" target="_blank">GitHub repository</a></p>
-      <p>Python scripts for the Glyphs font editor<br>&emsp;&rarr; <a href="https://github.com/pedroarilla/glyphs-scripts" target="_blank">GitHub repository</a></p>
+      <h1><strong>Miscellany</strong></h1>
+      <p>What can I say? I just love doing a pletora of things — and making lists is one of them.</p>
+  </section>
+  <section class="presentation" style="padding-bottom:0">
+      <h2>&rarr; <a href="./speaking-teaching.html">Speaking and Teaching</a></h2>
+      <h2>&rarr; <a href="./awards-exhibitions.html">Awards and Exhibitions</a></h2>
+      <h2>&rarr; <a href="./coding.html">Coding</a></h2>
+      <h2>&rarr; <a href="./writing.html">Writing</a></h2>
+      <h2>&rarr; <a href="./reading.html">Reading</a></h2>
+      <h2>&rarr; <a href="./gaming.html">Gaming</a></h2>
   </section>
   <section class="data" id="the-end">
     <p>&#13025; 2010–<script>document.write(new Date().getFullYear())</script> &VerticalLine; <a href="mailto:info@pedroarilla.com">Email</a> &vellip; <a href="https://twitter.com/pedroarilla" rel="me" target="_blank" title="Twitter Pedro Arilla's profile">Twitter</a> &vellip; <a href="https://instagram.com/pedroarilla" rel="me" target="_blank" title="Instagram Pedro Arilla's profile">Instagram</a> &vellip; <a href="https://www.linkedin.com/in/pedroarilla" rel="me" target="_blank" title="LinkedIn Pedro Arilla's profile">LinkedIn</a></p>
