--- a/miscellany/reading.html
+++ b/miscellany/reading.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<title>Reading — Pedro Arilla</title>
-	<meta name="description" content="A list of books read by Pedro Arilla, type designer & typographer from Spain based in London (UK).">
-  <meta property="og:title" content="About — Pedro Arilla"/>
-	<meta property="og:description" content="A list of books ready by Pedro Arilla, type designer & typographer from Spain based in London (UK)."/>
+	<meta name="description" content="A list of the books I’ve read (or re-read). If I don’t enjoy a book, I quit — so I kind of recommend each book in this list.">
+  <meta property="og:title" content="Reading — Pedro Arilla"/>
+	<meta property="og:description" content="A list of the books I’ve read (or re-read). If I don’t enjoy a book, I quit — so I kind of recommend each book in this list."/>
 	<meta property="og:type" content="website"/>
 	<meta property="og:url" content="https://pedroarilla.com/reading"/>
 	<meta property="og:image" content="https://pedroarilla.com/pedroarilla.jpg"/>
@@ -20,27 +20,58 @@
     <ul>
       <li><strong><a href="../">pedroarilla</a></strong></li>
       <li><a href="../fonts">fonts</a></li>
-      <li><a href="../texts">writing</a></li>
-      <li><a href="./">reading</a></li>
-      <li><a href="../code">coding</a></li>
-      <li><a href="../about">about</a></li>
+      <li><a href="./">miscellany</a></li>
+      <li><a href="../contact">contact</a></li>
     </ul>
   </section>
   <section class="presentation" style="padding-bottom:0">
     <h1><strong>Reading</strong></h1>
-    <p>A list of the books I’ve read (or re-read). If I don’t enjoy a book, I quit — so I kind of recommend each book on this list.</p>
+    <p>A list of the books I’ve read (or re-read). If I don’t enjoy a book, I quit — so I kind of recommend each book in this list.</p>
     <p>
     💙 means I very recommend it.<br>
     ❤️ means FREAKIN’ WOW.<br>
-    💕 means I re-read this book — so potentially “wow-WOW”.
+    💕 means I re-read this book — so potentially “wow-WOW”.<br>
     </p>
   </section>
-  <section class="menu">
+  <section class="data" id="books-2020">
+    <h2>2020</h2>
     <ul>
-      <li><strong>Filter:</strong></li>
-      <li><a href="./">2020</a></li>
-      <li><a href="./2019.html">2019</a></li>
-      <li><a href="./rating.html">by rating</a></li>
+      <li><em><strong>Falcó</em></strong> de Arturo Pérez-Reverte [too sexist, not reading the next ones]</li>
+      <li><em><strong>Sapiens</em></strong> de Yuval Noah Harari 💙</li>
+      <li><em><strong>Tipometría</em></strong> de Miguel Catopodis</li>
+      <li><em><strong>Lluvia fina</em></strong> de Luis Landero</li>
+      <li><em><strong>The Arab of the Future</em></strong> by Riad Sattouf ❤️</li>
+      <li>&emsp;&rarr; Vol. 4: 1987–1992</li>
+      <li><em><strong>Saga</em></strong> by Brian K. Vaughan and Fiona Staples 💙</li>
+      <li>&emsp;&rarr; Book One</li>
+      <li>&emsp;&rarr; Book Two</li>
+      <li>&emsp;&rarr; Book Three</li>
+      <li><em><strong>The shape of design</em></strong> by Frank Chimero</li>
+      <li><em><strong>Crónicas de la Guerra Civil</em></strong> de Miguel Hernández 💕</li>
+      <li><em><strong>Locke & Key</em></strong> by Joe Hill and Gabriel Rodríguez</li>
+      <li>&emsp;&rarr; Welcome to Lovecraft</li>
+      <li>&emsp;&rarr; Head Games</li>
+      <li>&emsp;&rarr; Crown of Shadows</li>
+      <li>&emsp;&rarr; Keys to the Kingdom</li>
+      <li>&emsp;&rarr; Clockworks</li>
+      <li>&emsp;&rarr; Alpha & Omega</li>
+      <li><em><strong>La peste</em></strong> de Albert Camus</li>
+      <li><em><strong>Designing books</em></strong> by Jost Hochuli</li>
+      <li><em><strong>Detail in typography</em></strong> by Jost Hochuli 💕</li>
+      <li><em><strong>Los asquerosos</em></strong> de Santiago Lorenzo ❤️</li>
+      <li><em><strong>Clases de literatura</em></strong> de Julio Cortázar</li>
+      <li><em><strong>La cara norte del corazón</em></strong> de Dolores Redondo</li>
+      <li><em><strong>La herencia viva de los clásicos</em></strong> de Mary Beard</li>
+      <li><em><strong>El valor de educar</em></strong> de Fernando Savater 💙</li>
+      <li><em><strong>Bestiario</em></strong> de Julio Cortázar</li>
+      <li><em><strong>Ficciones</em></strong> de Jorge Luis Borges</li>
+      <li><em><strong>¡Me cago en Godard!</em></strong> de Pedro Vallín 💙</li>
+      <li><em><strong>La materia oscura</em></strong> de Philip Pullman 💙</li>
+      <li>&emsp;&rarr; Luces del norte</li>
+      <li>&emsp;&rarr; La daga</li>
+      <li>&emsp;&rarr; El catalejo lacado</li>
+      <li><em><strong>Proust and the Squid</em></strong> by Maryanne Wolf</li>
+      <li><em><strong>El ejército negro</em></strong> de Servando Rocha</li>
     </ul>
   </section>
   <section class="data" id="books-2019">
