--- a/miscellany/gaming.html
+++ b/miscellany/gaming.html
@@ -35,11 +35,12 @@
   <section class="data" id="games-2020">
     <h2>2020</h2>
     <ul>
-      <li><em><strong>Animal Crossing: New Horizons</em></strong> on Nintendo Switch, 30 hours 💙</li>
       <li><em><strong>Ori and the Will of Wisps</em></strong> on Nintendo Switch, 5 hours 💙</li>
+      <li><em><strong>Animal Crossing: New Horizons</em></strong> on Nintendo Switch, 50 hours 💙</li>
+      <li><em><strong>Guacamelee! 2</em></strong> on Nintendo Switch, 10 hours 💙</li>
       <li><em><strong>The Legend of Zelda: Link’s Awakening</em></strong> on Nintendo Switch, 25 hours 💙</li>
       <li><em><strong>Yooka-Laylee and the Impossible Lair</em></strong> on Nintendo Switch, 10 hours</li>
-      <li><em><strong>Guacamelee! 2</em></strong> on Nintendo Switch, 3 hours</li>
+      <li><em><strong>Fortnite</em></strong> on Nintendo Switch, 10 hours</li>
       <li><em><strong>Elliot Quest</em></strong> on Nintendo Switch, 3 hours</li>
       <li><em><strong>Sonic Mania</em></strong> on Nintendo Switch, 1 hour</li>
       <li><em><strong>Old Man’s Journey</em></strong> on Nintendo Switch, 1 hour</li>
