--- a/miscellany/reading.html
+++ b/miscellany/reading.html
@@ -36,6 +36,9 @@
   <section class="data" id="books-2020">
     <h2>2020</h2>
     <ul>
+      <li><em><strong>Misery</em></strong> de Stephen King</li>
+      <li><em><strong>Replay</em></strong> by Tristan Donovan 💙</li>
+      <li><em><strong>Los jinetes del Apocalipsis</em></strong> de Dawkins, Hitchens, Dennett  y Harris</li>
       <li><em><strong>Falcó</em></strong> de Arturo Pérez-Reverte [too sexist, not reading the next ones]</li>
       <li><em><strong>Sapiens</em></strong> de Yuval Noah Harari 💙</li>
       <li><em><strong>Tipometría</em></strong> de Miguel Catopodis</li>
