--- a/fonts/index.html
+++ b/fonts/index.html
@@ -113,14 +113,14 @@
     <a href="mestre" title="Go to Mestre font" class="link-img"><img src="rsc/mestre-font.gif" title="Mestre font"></a>
     <h2><a href="mestre" title="Go to Mestre font">Mestre</a> (Pedro Arilla, 2016)</h2>
     <p>A rational &amp; humanist sans-serif w/ 16 fonts.</p>
-    <p>Full family: pay what you want — minimum £10.</p>
+    <p>Full family: pay what you want — minimum €10.</p>
     <p>Go to <a href="mestre" title="Go to Mestre font">Mestre web page</a>.</p>
   </article>
   <article class="data" id="valentina">
     <a href="valentina" title="Go to Valentina font" class="link-img"><img src="rsc/valentina-font.gif" title="Valentina font"></a>
     <h2><a href="valentina" title="Go to Valentina font">Valentina</a> (Pedro Arilla, 2012)</h2>
     <p>An antique Spanish didone.</p>
-    <p>Font: pay what you want — minimum £1.</p>
+    <p>Font: pay what you want — minimum €1.</p>
     <p>Go to <a href="valentina" title="Go to Valentina font">Valentina web page</a>.</p>
   </article>
   <section class="data" id="the-end">
