--- a/fonts/mestre.html
+++ b/fonts/mestre.html
@@ -41,7 +41,7 @@
   </section>
   <section class="data" id="shopping">
     <p><a href="https://payhip.com/b/X15B" class="payhip-buy-button" data-theme="green" data-product="X15B">Buy Mestre font</a></p>
-    <p style="padding-top:20px"><strong>Pay what you want — minimum £10.</strong></p>
+    <p style="padding-top:20px"><strong>Pay what you want — minimum €10.</strong></p>
   </section>
   <section id="images">
     <img src="rsc/pedroarilla-mestre-1.jpg">
@@ -65,7 +65,7 @@
   </section>
   <section class="data" id="shopping">
     <p><a href="https://payhip.com/b/X15B" class="payhip-buy-button" data-theme="green" data-product="X15B">Buy Mestre font</a></p>
-    <p style="padding-top:20px"><strong>Pay what you want — minimum £10.</strong></p>
+    <p style="padding-top:20px"><strong>Pay what you want — minimum €10.</strong></p>
   </section>
   <section class="data" id="the-end">
     <p>&#13025; 2010–<script>document.write(new Date().getFullYear())</script> &VerticalLine; <a href="mailto:info@pedroarilla.com">Email</a> &vellip; <a href="https://twitter.com/pedroarilla" rel="me" target="_blank" title="Twitter Pedro Arilla's profile">Twitter</a> &vellip; <a href="https://instagram.com/pedroarilla" rel="me" target="_blank" title="Instagram Pedro Arilla's profile">Instagram</a> &vellip; <a href="https://www.linkedin.com/in/pedroarilla" rel="me" target="_blank" title="LinkedIn Pedro Arilla's profile">LinkedIn</a></p>
