--- a/fonts/valentina.html
+++ b/fonts/valentina.html
@@ -43,7 +43,7 @@
   </section>
   <section class="data" id="shopping">
     <p><a href="https://payhip.com/b/n1sU" class="payhip-buy-button" data-theme="green" data-product="n1sU">Buy Valentina font</a></p>
-    <p style="padding-top:20px"><strong>Pay what you want — minimum £1.</strong></p>
+    <p style="padding-top:20px"><strong>Pay what you want — minimum €1.</strong></p>
   </section>
   <section id="images">
     <img src="rsc/pedroarilla-valentina-01.png">
@@ -60,7 +60,7 @@
   </section>
   <section class="data" id="shopping">
     <p><a href="https://payhip.com/b/n1sU" class="payhip-buy-button" data-theme="green" data-product="n1sU">Buy Valentina font</a></p>
-    <p style="padding-top:20px"><strong>Pay what you want — minimum £1.</strong></p>
+    <p style="padding-top:20px"><strong>Pay what you want — minimum €1.</strong></p>
   </section>
   <section class="data" id="the-end">
     <p>&#13025; 2010–<script>document.write(new Date().getFullYear())</script> &VerticalLine; <a href="mailto:info@pedroarilla.com">Email</a> &vellip; <a href="https://twitter.com/pedroarilla" rel="me" target="_blank" title="Twitter Pedro Arilla's profile">Twitter</a> &vellip; <a href="https://instagram.com/pedroarilla" rel="me" target="_blank" title="Instagram Pedro Arilla's profile">Instagram</a> &vellip; <a href="https://www.linkedin.com/in/pedroarilla" rel="me" target="_blank" title="LinkedIn Pedro Arilla's profile">LinkedIn</a></p>
