--- a/fonts/index.html
+++ b/fonts/index.html
@@ -28,6 +28,13 @@
     <h1><strong>Fonts</strong></h1>
     <p>I’ve been designing letters, words and thereafter fonts since 2010. These are the ones published or made public.</p>
   </section>
+  <article class="data" id="morillas">
+    <a href="https://soundcloud.com/user-289897432/morillas-talks-pedro-arilla" title="Go to Morillas font" target="_blank" class="link-img"><img src="rsc/morillas-font.gif" title="Morillas font"></a>
+    <h2><a href="https://soundcloud.com/user-289897432/morillas-talks-pedro-arilla" title="Go to Morillas font" target="_blank">Morillas Sans</a> (Monotype, 2020)</h2>
+    <p>Bespoke type family for Morillas for a (r)evolutionary identity.</p>
+    <p>Italic by Emilios Theofanous.</p>
+    <p>Listen to <a href="https://soundcloud.com/user-289897432/morillas-talks-pedro-arilla" target="_blank">interview on Morillas Sans</a> @ SoundCloud.</p>
+  </article>
   <article class="data" id="fs-rosa">
     <a href="https://www.myfonts.com/fonts/mti/fs-rosa/" title="Go to FS Rosa font" target="_blank" class="link-img"><img src="rsc/fs-rosa-font.gif" title="FS Rosa font"></a>
     <h2><a href="https://www.myfonts.com/fonts/mti/fs-rosa/" title="Go to FS Rosa font" target="_blank">FS Rosa</a> (Monotype, 2020)</h2>
@@ -36,7 +43,7 @@
   </article>
   <article class="data" id="motogp">
     <a href="https://www.monotype.com/studio/portfolio/motogp" title="Go to MotoGP font" target="_blank" class="link-img"><img src="rsc/motogp-font.gif" title="MotoGP font"></a>
-    <h2><a href="https://www.monotype.com/studio/portfolio/motogp" title="Go to MotoGP font" target="_blank">MotoGP</a> (Monotype, 2020)</h2>
+    <h2><a href="https://www.monotype.com/studio/portfolio/motogp" title="Go to MotoGP font" target="_blank">MotoGP Display & Text</a> (Monotype, 2020)</h2>
     <p>Bespoke type family for MotoGP with a vibrant and charismatic identity.</p>
     <p>Read <a href="https://www.monotype.com/studio/portfolio/motogp" target="_blank">MotoGP case-study</a> @ Monotype.</p>
   </article>
