--- a/miscellany/reading.html
+++ b/miscellany/reading.html
@@ -36,8 +36,9 @@
   <section class="data" id="books-2020">
     <h2>2020</h2>
     <ul>
-      <li><em><strong>Misery</em></strong> de Stephen King</li>
       <li><em><strong>Replay</em></strong> by Tristan Donovan 💙</li>
+      <li><em><strong>Filosofía de la cultura</em></strong> de Jesús Mosterín</li>
+      <li><em><strong>Misery</em></strong> de Stephen King</li>
       <li><em><strong>Los jinetes del Apocalipsis</em></strong> de Dawkins, Hitchens, Dennett  y Harris</li>
       <li><em><strong>Falcó</em></strong> de Arturo Pérez-Reverte [⚠️ Too sexist, not reading the next ones]</li>
       <li><em><strong>Sapiens</em></strong> de Yuval Noah Harari 💙</li>
